[package]
name = "MemFlux"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dashmap = "6.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
# --- Add these three lines ---
bincode = "1.3"
futures = "0.3" 
async-stream = "0.3.6"
sqlparser = "0.57.0"
# (futures is often a transitive dependency but good to have)