[package]
name = "MemFlux"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dashmap = "6.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "fs", "time"] }
bincode = "1.3"
futures = "0.3" 
async-stream = "0.3.6"
uuid = { version = "1.8.0", features = ["v4"] }
pin-project-lite = "0.2.16"
regex = { version = "1.10.5", default-features = false, features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"
rcgen = "0.11"
lz4_flex = "0.11.5"
rayon = "1.11.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

